--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-redux": "^9.1.2",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.28.0",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "tw-elements-react": "^1.0.0-alpha-end"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
